; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libfetch/extr_http.c_http_header_lex.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libfetch/extr_http.c_http_header_lex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c" \09\00", align 1
@HTTPHL_END = common dso_local global i32 0, align 4
@HTTPHL_ERROR = common dso_local global i32 0, align 4
@HTTPHL_STRING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c" \09,=\00", align 1
@HTTPHL_WORD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8*)* @http_header_lex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @http_header_lex(i8** %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8**, i8*** %4, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = call i32 @strspn(i8* %8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %10 = load i8**, i8*** %4, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = sext i32 %9 to i64
  %13 = getelementptr inbounds i8, i8* %11, i64 %12
  store i8* %13, i8** %10, align 8
  %14 = load i8**, i8*** %4, align 8
  %15 = load i8*, i8** %14, align 8
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @HTTPHL_END, align 4
  store i32 %20, i32* %3, align 4
  br label %76

21:                                               ; preds = %2
  %22 = load i8**, i8*** %4, align 8
  %23 = load i8*, i8** %22, align 8
  %24 = load i8, i8* %23, align 1
  %25 = sext i8 %24 to i32
  %26 = icmp eq i32 %25, 44
  br i1 %26, label %33, label %27

27:                                               ; preds = %21
  %28 = load i8**, i8*** %4, align 8
  %29 = load i8*, i8** %28, align 8
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp eq i32 %31, 61
  br i1 %32, label %33, label %39

33:                                               ; preds = %27, %21
  %34 = load i8**, i8*** %4, align 8
  %35 = load i8*, i8** %34, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %34, align 8
  %37 = load i8, i8* %35, align 1
  %38 = sext i8 %37 to i32
  store i32 %38, i32* %3, align 4
  br label %76

39:                                               ; preds = %27
  %40 = load i8**, i8*** %4, align 8
  %41 = load i8*, i8** %40, align 8
  %42 = load i8, i8* %41, align 1
  %43 = sext i8 %42 to i32
  %44 = icmp eq i32 %43, 34
  br i1 %44, label %45, label %59

45:                                               ; preds = %39
  %46 = load i8**, i8*** %4, align 8
  %47 = load i8*, i8** %46, align 8
  %48 = getelementptr inbounds i8, i8* %47, i32 1
  store i8* %48, i8** %46, align 8
  %49 = load i8*, i8** %5, align 8
  %50 = call i8* @http_parse_headerstring(i8* %48, i8* %49)
  %51 = load i8**, i8*** %4, align 8
  store i8* %50, i8** %51, align 8
  %52 = load i8**, i8*** %4, align 8
  %53 = load i8*, i8** %52, align 8
  %54 = icmp eq i8* %53, null
  br i1 %54, label %55, label %57

55:                                               ; preds = %45
  %56 = load i32, i32* @HTTPHL_ERROR, align 4
  store i32 %56, i32* %3, align 4
  br label %76

57:                                               ; preds = %45
  %58 = load i32, i32* @HTTPHL_STRING, align 4
  store i32 %58, i32* %3, align 4
  br label %76

59:                                               ; preds = %39
  %60 = load i8**, i8*** %4, align 8
  %61 = load i8*, i8** %60, align 8
  %62 = call i64 @strcspn(i8* %61, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i64 %62, i64* %6, align 8
  %63 = load i8*, i8** %5, align 8
  %64 = load i8**, i8*** %4, align 8
  %65 = load i8*, i8** %64, align 8
  %66 = load i64, i64* %6, align 8
  %67 = call i32 @memcpy(i8* %63, i8* %65, i64 %66)
  %68 = load i8*, i8** %5, align 8
  %69 = load i64, i64* %6, align 8
  %70 = getelementptr inbounds i8, i8* %68, i64 %69
  store i8 0, i8* %70, align 1
  %71 = load i64, i64* %6, align 8
  %72 = load i8**, i8*** %4, align 8
  %73 = load i8*, i8** %72, align 8
  %74 = getelementptr inbounds i8, i8* %73, i64 %71
  store i8* %74, i8** %72, align 8
  %75 = load i32, i32* @HTTPHL_WORD, align 4
  store i32 %75, i32* %3, align 4
  br label %76

76:                                               ; preds = %59, %57, %55, %33, %19
  %77 = load i32, i32* %3, align 4
  ret i32 %77
}

declare dso_local i32 @strspn(i8*, i8*) #1

declare dso_local i8* @http_parse_headerstring(i8*, i8*) #1

declare dso_local i64 @strcspn(i8*, i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
